[package]
name = "rusty_secrets"
version = "0.0.3"
authors = ["Frederic Jacobs <github@fredericjacobs.com>", "sellibitze"]
description = "Implementation of threshold Shamir secret sharing in the Rust programming language."
homepage = "https://github.com/freedomofpress/RustySecrets"
license = "BSD-3-Clause"
readme = "README.md"
build = "build.rs"

[dependencies]
rustc-serialize = "^0.3.18"
rand = "^0.3.14"
rust-crypto = "^0.2.36"
merkle_sigs = { git = "https://github.com/SpinResearch/merkle_sigs.rs" }
[dependencies.protobuf]
